Evaluating on 5k images max 80% acc!!!, minor fixes

--- a/OCR-Evaluator.ipynb
+++ b/OCR-Evaluator.ipynb
@@ -4,8 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Evaluating OCR Models\n",
-    "! Thresholding is turned off"
+    "# Evaluating OCR Models"
    ]
   },
   {
@@ -19,9 +18,7 @@
      "text": [
       "Loading Segmantation model:\n",
       "INFO:tensorflow:Restoring parameters from models/gap-clas/CNN-CG\n",
-      "INFO:tensorflow:Restoring parameters from models/gap-clas/large/CNN-CG\n",
-      "INFO:tensorflow:Restoring parameters from models/gap-clas/RNN/Bi-RNN\n",
-      "INFO:tensorflow:Restoring parameters from models/gap-clas/RNN/Bi-RNN-dense\n"
+      "INFO:tensorflow:Restoring parameters from models/gap-clas/RNN/Bi-RNN-new\n"
      ]
     }
    ],
@@ -41,13 +38,14 @@
     "from IPython.display import display, clear_output\n",
     "\n",
     "# Import costume functions, corresponding to notebooks\n",
-    "#from ocr import page, words, charSeg\n",
-    "from ocr.normalization import letterNorm\n",
     "from ocr import charSeg\n",
+    "from ocr.normalization import letterNorm, imageNorm\n",
+    "# from ocr import charSeg\n",
     "# Helpers\n",
     "from ocr.helpers import implt, resize\n",
     "from ocr.datahelpers import loadWordsData, char2idx, idx2char\n",
-    "from ocr.tfhelpers import Graph"
+    "from ocr.tfhelpers import Graph\n",
+    "from ocr.viz import printProgressBar"
    ]
   },
   {
@@ -84,18 +82,18 @@
      "output_type": "stream",
      "text": [
       "INFO:tensorflow:Restoring parameters from models/char-clas/en/CharClassifier\n",
-      "INFO:tensorflow:Restoring parameters from models/char-clas/en/Bi-RNN/model_2\n",
-      "INFO:tensorflow:Restoring parameters from models/char-clas/en/Bi-RNN/model_1\n",
-      "INFO:tensorflow:Restoring parameters from models/word-clas/en/WordClassifier\n"
+      "INFO:tensorflow:Restoring parameters from models/word-clas/en/WordClassifier\n",
+      "INFO:tensorflow:Restoring parameters from models/word-clas/en/SeqRNN/Classifier\n"
      ]
     }
    ],
    "source": [
     "charClass_1 = Graph('models/char-clas/' + LANG + '/CharClassifier')\n",
-    "charClass_2 = Graph('models/char-clas/' + LANG + '/Bi-RNN/model_2', 'prediction')\n",
-    "charClass_3 = Graph('models/char-clas/' + LANG + '/Bi-RNN/model_1', 'prediction')\n",
+    "# charClass_2 = Graph('models/char-clas/' + LANG + '/Bi-RNN/model_2', 'prediction')\n",
+    "# charClass_3 = Graph('models/char-clas/' + LANG + '/Bi-RNN/model_1', 'prediction')\n",
     "\n",
-    "wordClass = Graph('models/word-clas/' + LANG + '/WordClassifier', 'prediction_infer')"
+    "wordClass = Graph('models/word-clas/' + LANG + '/WordClassifier', 'prediction_infer')\n",
+    "wordClass2 = Graph('models/word-clas/' + LANG + '/SeqRNN/Classifier', 'word_prediction')"
    ]
   },
   {
@@ -115,18 +113,29 @@
      "output_type": "stream",
      "text": [
       "Loading words...\n",
-      "-> Number of words: 250\n",
-      "Number of chars: 1228\n"
+      "-> Number of words: 267\n",
+      " |████████████████████████████████████████| 100.0% \n",
+      "\n",
+      "Number of chars: 1356\n"
      ]
     }
    ],
    "source": [
-    "images, labels = loadWordsData('data/test_words/' + LANG, loadGaplines=False)\n",
+    "images, labels = loadWordsData('data/test_words/' + LANG + '_raw', loadGaplines=False)\n",
+    "\n",
+    "for i in range(len(images)):\n",
+    "    printProgressBar(i, len(images))\n",
+    "    images[i] = imageNorm(\n",
+    "        cv2.cvtColor(images[i], cv2.COLOR_GRAY2RGB),\n",
+    "        60,\n",
+    "        border=False,\n",
+    "        tilt=True,\n",
+    "        hystNorm=True)\n",
     "\n",
     "if LANG == 'en':\n",
     "    for i in range(len(labels)):\n",
     "        labels[i] = unidecode.unidecode(labels[i])\n",
-    "        \n",
+    "print()        \n",
     "print('Number of chars:', sum(len(l) for l in labels))"
    ]
   },
@@ -198,17 +207,17 @@
    "source": [
     "class WordCycler:\n",
     "    \"\"\" Cycle through the words and recognise them \"\"\" \n",
-    "    def __init__(self, images, labels, charClass):\n",
+    "    def __init__(self, images, labels, charClass, slider=(60, 15)):\n",
     "        self.images = images\n",
     "        self.labels = labels\n",
     "        self.charClass = charClass\n",
-    "        \n",
+    "        self.slider = slider\n",
     "        self.totalChars = sum([len(l) for l in labels])\n",
     "        \n",
-    "        self.evaluateAll()\n",
+    "        self.evaluate()\n",
     "        \n",
     "    def recogniseWord(self, img):\n",
-    "        slider = (60, 15)\n",
+    "        slider = self.slider\n",
     "        length = img.shape[1]//slider[1]\n",
     "        \n",
     "        input_seq = np.zeros((1, length, slider[0] * slider[1]), dtype=np.float32)\n",
@@ -216,12 +225,20 @@
     "                           for loc in range(length)]                                \n",
     "        input_seq = input_seq.swapaxes(0, 1)\n",
     "        \n",
-    "        targets = np.zeros((1, 1), dtype=np.int32)                        \n",
-    "        pred = self.charClass.eval_feed({'encoder_inputs:0': input_seq,\n",
-    "                                         'encoder_inputs_length:0': [length],\n",
-    "                                         'decoder_targets:0': targets,\n",
-    "                                         'keep_prob:0': 1})[0]\n",
-    "                  \n",
+    "                              \n",
+    "        if slider[1] == 15:\n",
+    "            targets = np.zeros((1, 1), dtype=np.int32)  \n",
+    "            pred = self.charClass.eval_feed({'encoder_inputs:0': input_seq,\n",
+    "                                             'encoder_inputs_length:0': [length],\n",
+    "                                             'decoder_targets:0': targets,\n",
+    "                                             'keep_prob:0': 1})[0]\n",
+    "        else:\n",
+    "            targets = np.zeros((1, 1, 4096), dtype=np.int32)  \n",
+    "            pred = self.charClass.eval_feed({'encoder_inputs:0': input_seq,\n",
+    "                                             'encoder_inputs_length:0': [length],\n",
+    "                                             'letter_targets:0': targets,\n",
+    "                                             'is_training:0': False,\n",
+    "                                             'keep_prob:0': 1})[0]\n",
     "        word = ''\n",
     "        for i in pred:\n",
     "            if word == 1:\n",
@@ -239,17 +256,13 @@
     "                correct += 1\n",
     "                \n",
     "        return correct            \n",
-    "        \n",
     "\n",
-    "    def evaluateAll(self):\n",
-    "        self.evaluate()\n",
-    "        \n",
-    "\n",
+    "    \n",
     "    def evaluate(self):\n",
     "        \"\"\" Evaluate accuracy of the word classification \"\"\"\n",
     "        print()\n",
     "        print(\"STATS: Seq2Seq\")\n",
-    "        print(self.labels[0], ':', self.recogniseWord(self.images[0]))\n",
+    "        print(self.labels[1], ':', self.recogniseWord(self.images[1]))\n",
     "        start_time = time.time()\n",
     "        correct = 0\n",
     "        correctWithCorrection = 0\n",
@@ -283,32 +296,20 @@
     "        \n",
     "        self.evaluateAll()\n",
     "        \n",
-    "    def recogniseWord(self, img, gapRNN=False, norm1=False, norm2=False, large=False):\n",
-    "        if large:\n",
-    "            border = 60\n",
-    "        else:\n",
-    "            border = 15\n",
+    "    def recogniseWord(self, img, gapRNN=False):\n",
     "        img = cv2.copyMakeBorder(img,\n",
-    "                                 0, 0, border, border,\n",
+    "                                 0, 0, 30, 30,\n",
     "                                 cv2.BORDER_CONSTANT,\n",
     "                                 value=[0, 0, 0])\n",
-    "        if norm1:\n",
-    "            gapImg = (img - np.mean(img)) / max(np.std(img), 1.0 / math.sqrt(img.size))\n",
-    "        else:\n",
-    "            gapImg = img\n",
-    "        gaps = charSeg.segmentation(gapImg, RNN=gapRNN, large=large)\n",
+    "        gaps = charSeg.segmentation(img, RNN=gapRNN)\n",
     "        \n",
     "        chars = []\n",
     "        for i in range(len(gaps)-1):\n",
     "            char = img[:, gaps[i]:gaps[i+1]]\n",
     "            # TODO None type error after treshold\n",
-    "            char, dim = letterNorm(char, is_thresh=False, dim=True)\n",
+    "            char, dim = letterNorm(char, is_thresh=True, dim=True)\n",
     "            # TODO Test different values\n",
     "            if dim[0] > 4 and dim[1] > 4:\n",
-    "                if norm2:\n",
-    "                    char = (char - np.mean(char)) / max(np.std(char), 1.0 / math.sqrt(char.size))\n",
-    "                else:\n",
-    "                    char = char\n",
     "                chars.append(char.flatten())\n",
     "                \n",
     "        chars = np.array(chars)\n",
@@ -337,24 +338,20 @@
     "        \n",
     "\n",
     "    def evaluateAll(self):\n",
-    "        self.evaluate(True, True, False, False)\n",
-    "        self.evaluate(True, False, False, True)\n",
-    "#         self.evaluate(True, True, True)\n",
-    "        self.evaluate(False, False, False, False)\n",
-    "        self.evaluate(False, False, False, True)\n",
+    "        self.evaluate(True)\n",
+    "#         self.evaluate(False)\n",
     "        \n",
     "\n",
-    "    def evaluate(self, gapRNN, norm1, norm2, large=False):\n",
+    "    def evaluate(self, gapRNN):\n",
     "        \"\"\" Evaluate accuracy of the word classification \"\"\"\n",
     "        print()\n",
-    "        print(\"STATS: gapRNN - %s, charRNN - %s, gapNorm - %s, charNorm - %s, large - %s\" %\n",
-    "              (gapRNN, self.charRNN, norm1, norm2, large))\n",
-    "        print(self.labels[0], ':', self.recogniseWord(self.images[0], gapRNN, norm1, norm2, large))\n",
+    "        print(\"STATS: gapRNN - %s, charRNN - %s\" % (gapRNN, self.charRNN))\n",
+    "        print(self.labels[1], ':', self.recogniseWord(self.images[1], gapRNN))\n",
     "        start_time = time.time()\n",
     "        correct = 0\n",
     "        correctWithCorrection = 0\n",
     "        for i in range(len(self.images)):\n",
-    "            word = self.recogniseWord(self.images[i], gapRNN, norm1, norm2, large)\n",
+    "            word = self.recogniseWord(self.images[i], gapRNN)\n",
     "            correct += self.countCorrect(word,\n",
     "                                         self.labels[i])\n",
     "            correctWithCorrection += self.countCorrect(correction(word),\n",
@@ -377,101 +374,31 @@
      "text": [
       "\n",
       "STATS: Seq2Seq\n",
-      "urges : ápa\n",
-      "Correct/Total: 41 / 1228\n",
-      "Accuracy: 3.3388 %\n",
-      "Accuracy with correction: 3.6645 %\n",
-      "--- 15.4 seconds ---\n",
+      "spreads : ábqpsjuba\n",
+      "Correct/Total: 34 / 1356\n",
+      "Accuracy: 2.5074 %\n",
+      "Accuracy with correction: 2.8761 %\n",
+      "--- 23.65 seconds ---\n",
       "\n",
-      "STATS: gapRNN - True, charRNN - False, gapNorm - True, charNorm - False, large - False\n",
-      "urges : osrpes\n",
-      "Correct/Total: 411 / 1228\n",
-      "Accuracy: 33.4691 %\n",
-      "Accuracy with correction: 51.1401 %\n",
-      "--- 58.04 seconds ---\n",
+      "STATS: Seq2Seq\n",
+      "spreads : vpedea\n",
+      "Correct/Total: 222 / 1356\n",
+      "Accuracy: 16.3717 %\n",
+      "Accuracy with correction: 14.823 %\n",
+      "--- 40.91 seconds ---\n",
       "\n",
-      "STATS: gapRNN - True, charRNN - False, gapNorm - False, charNorm - False, large - True\n",
-      "urges : agee\n",
-      "Correct/Total: 149 / 1228\n",
-      "Accuracy: 12.1336 %\n",
-      "Accuracy with correction: 9.9349 %\n",
-      "--- 84.5 seconds ---\n",
-      "\n",
-      "STATS: gapRNN - False, charRNN - False, gapNorm - False, charNorm - False, large - False\n",
-      "urges : trrps\n",
-      "Correct/Total: 663 / 1228\n",
-      "Accuracy: 53.9902 %\n",
-      "Accuracy with correction: 59.772 %\n",
-      "--- 43.69 seconds ---\n",
-      "\n",
-      "STATS: gapRNN - False, charRNN - False, gapNorm - False, charNorm - False, large - True\n",
-      "urges : zrqes\n",
-      "Correct/Total: 632 / 1228\n",
-      "Accuracy: 51.4658 %\n",
-      "Accuracy with correction: 52.1173 %\n",
-      "--- 78.67 seconds ---\n",
-      "\n",
-      "STATS: gapRNN - True, charRNN - True, gapNorm - True, charNorm - False, large - False\n",
-      "urges : zrqez\n",
-      "Correct/Total: 574 / 1228\n",
-      "Accuracy: 46.7427 %\n",
-      "Accuracy with correction: 55.3746 %\n",
-      "--- 63.31 seconds ---\n",
-      "\n",
-      "STATS: gapRNN - True, charRNN - True, gapNorm - False, charNorm - False, large - True\n",
-      "urges : odeei\n",
-      "Correct/Total: 139 / 1228\n",
-      "Accuracy: 11.3192 %\n",
-      "Accuracy with correction: 8.9577 %\n",
-      "--- 86.8 seconds ---\n",
-      "\n",
-      "STATS: gapRNN - False, charRNN - True, gapNorm - False, charNorm - False, large - False\n",
-      "urges : krrps\n",
-      "Correct/Total: 674 / 1228\n",
-      "Accuracy: 54.886 %\n",
-      "Accuracy with correction: 56.9218 %\n",
-      "--- 46.02 seconds ---\n",
-      "\n",
-      "STATS: gapRNN - False, charRNN - True, gapNorm - False, charNorm - False, large - True\n",
-      "urges : krges\n",
-      "Correct/Total: 643 / 1228\n",
-      "Accuracy: 52.3616 %\n",
-      "Accuracy with correction: 53.0945 %\n",
-      "--- 81.38 seconds ---\n",
-      "\n",
-      "STATS: gapRNN - True, charRNN - True, gapNorm - True, charNorm - False, large - False\n",
-      "urges : csryss\n",
-      "Correct/Total: 279 / 1228\n",
-      "Accuracy: 22.7199 %\n",
-      "Accuracy with correction: 38.1107 %\n",
-      "--- 66.77 seconds ---\n",
-      "\n",
-      "STATS: gapRNN - True, charRNN - True, gapNorm - False, charNorm - False, large - True\n",
-      "urges : ofoen\n",
-      "Correct/Total: 139 / 1228\n",
-      "Accuracy: 11.3192 %\n",
-      "Accuracy with correction: 9.3648 %\n",
-      "--- 88.8 seconds ---\n",
-      "\n",
-      "STATS: gapRNN - False, charRNN - True, gapNorm - False, charNorm - False, large - False\n",
-      "urges : rerys\n",
-      "Correct/Total: 664 / 1228\n",
-      "Accuracy: 54.0717 %\n",
-      "Accuracy with correction: 57.0033 %\n",
-      "--- 47.74 seconds ---\n",
-      "\n",
-      "STATS: gapRNN - False, charRNN - True, gapNorm - False, charNorm - False, large - True\n",
-      "urges : sryse\n",
-      "Correct/Total: 626 / 1228\n",
-      "Accuracy: 50.9772 %\n",
-      "Accuracy with correction: 51.2215 %\n",
-      "--- 82.86 seconds ---\n"
+      "STATS: gapRNN - True, charRNN - False\n",
+      "spreads : spreads\n",
+      "Correct/Total: 1049 / 1356\n",
+      "Accuracy: 77.3599 %\n",
+      "Accuracy with correction: 80.0147 %\n",
+      "--- 77.22 seconds ---\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<__main__.Cycler at 0x7f866d804fd0>"
+       "<__main__.Cycler at 0x7efd7391a898>"
       ]
      },
      "execution_count": 8,
@@ -486,20 +413,25 @@
     "           labels,\n",
     "           wordClass)\n",
     "\n",
+    "WordCycler(images,\n",
+    "           labels,\n",
+    "           wordClass2,\n",
+    "           (60, 2))\n",
+    "\n",
     "Cycler(images,\n",
     "       labels,\n",
     "       charClass_1,\n",
     "       charRNN=False)\n",
     "\n",
-    "Cycler(images,\n",
-    "       labels,\n",
-    "       charClass_2,\n",
-    "       charRNN=True)\n",
+    "# Cycler(images,\n",
+    "#        labels,\n",
+    "#        charClass_2,\n",
+    "#        charRNN=True)\n",
     "\n",
-    "Cycler(images,\n",
-    "       labels,\n",
-    "       charClass_3,\n",
-    "       charRNN=True)"
+    "# Cycler(images,\n",
+    "#        labels,\n",
+    "#        charClass_3,\n",
+    "#        charRNN=True)"
    ]
   }
  ],
