Removing img preprocessing from model training, acc up to 71%

--- a/OCR-Evaluator.ipynb
+++ b/OCR-Evaluator.ipynb
@@ -378,27 +378,27 @@
       "Correct/Total: 34 / 1356\n",
       "Accuracy: 2.5074 %\n",
       "Accuracy with correction: 2.8761 %\n",
-      "--- 23.65 seconds ---\n",
+      "--- 20.75 seconds ---\n",
       "\n",
       "STATS: Seq2Seq\n",
-      "spreads : vpedea\n",
-      "Correct/Total: 222 / 1356\n",
-      "Accuracy: 16.3717 %\n",
-      "Accuracy with correction: 14.823 %\n",
-      "--- 40.91 seconds ---\n",
+      "spreads : spreadsa\n",
+      "Correct/Total: 963 / 1356\n",
+      "Accuracy: 71.0177 %\n",
+      "Accuracy with correction: 70.059 %\n",
+      "--- 35.87 seconds ---\n",
       "\n",
       "STATS: gapRNN - True, charRNN - False\n",
       "spreads : spreads\n",
       "Correct/Total: 1049 / 1356\n",
       "Accuracy: 77.3599 %\n",
       "Accuracy with correction: 80.0147 %\n",
-      "--- 77.22 seconds ---\n"
+      "--- 61.47 seconds ---\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<__main__.Cycler at 0x7efd7391a898>"
+       "<__main__.Cycler at 0x7fe5f26a4ef0>"
       ]
      },
      "execution_count": 8,
