Update of char2idx function

--- a/CharClassifier-RNN.ipynb
+++ b/CharClassifier-RNN.ipynb
@@ -57,7 +57,7 @@
     "\n",
     "\n",
     "# Helpers\n",
-    "from ocr.datahelpers import loadCharsData, correspondingShuffle, char2idx, idx2char\n",
+    "from ocr.datahelpers import loadCharsData, correspondingShuffle, char2idx\n",
     "from ocr.helpers import implt\n",
     "from ocr.mlhelpers import TrainingPlot, DataSet\n",
     "from ocr.imgtransform import coordinates_remap\n",
@@ -195,8 +195,8 @@
     "words = np.empty(4*length, dtype=object)\n",
     "for i, word in enumerate(tmpWords):\n",
     "    try:\n",
-    "        words[i] = [char2idx(c, LANG) for c in list(word)]\n",
-    "        words[i + length] = [char2idx(c, LANG) for c in list(word.title())]\n",
+    "        words[i] = [char2idx(c) for c in list(word)]\n",
+    "        words[i + length] = [char2idx(c) for c in list(word.title())]\n",
     "        words[i + 2*length] = random_insert(words[i])\n",
     "        words[i + 3*length] = random_insert(words[i + length])\n",
     "    except KeyError:\n",
@@ -294,8 +294,7 @@
     "for i, word in enumerate(testLabels):\n",
     "    testData[i] = [teFeeder.getChar(c) for c in word]\n",
     "    \n",
-    "print(\"Training words: %g\" % div)\n",
-    "# print(\"Letter count:\", [idx2char(i) + \":\" + str(len(l)) for i, l in enumerate(letters)])"
+    "print(\"Training words: %g\" % div)"
    ]
   },
   {
