--- a/CharClassifier.ipynb
+++ b/CharClassifier.ipynb
@@ -148,14 +148,7 @@
     }
    ],
    "source": [
-    "EN_CLAS = 53\n",
-    "CZ_CLAS = 83\n",
-    "CLAS = 53\n",
-    "\n",
-    "if LANG == 'en':\n",
-    "    CLAS = EN_CLAS\n",
-    "elif LANG == 'cz':\n",
-    "    CLAS = CZ_CLAS\n",
+    "CLAS = 83 if LANG =='cz' else 53\n",
     "\n",
     "# dimension 64x64 = 4096\n",
     "images, labels = loadCharsData(\n",
