--- a/OCR-Evaluator.ipynb
+++ b/OCR-Evaluator.ipynb
@@ -43,7 +43,7 @@
     "# from ocr import charSeg\n",
     "# Helpers\n",
     "from ocr.helpers import implt, resize\n",
-    "from ocr.datahelpers import loadWordsData, char2idx, idx2char\n",
+    "from ocr.datahelpers import loadWordsData, idx2char\n",
     "from ocr.tfhelpers import Graph\n",
     "from ocr.viz import printProgressBar"
    ]
@@ -244,7 +244,7 @@
     "            if word == 1:\n",
     "                break\n",
     "            else:\n",
-    "                word += idx2char(i)\n",
+    "                word += idx2char(i, True)\n",
     "\n",
     "        return word.lower()\n",
     "    \n",
@@ -324,7 +324,7 @@
     "                \n",
     "            for c in pred:\n",
     "                # word += CHARS[charIdx]\n",
-    "                word += idx2char(c)        \n",
+    "                word += idx2char(c, lang)        \n",
     "        return word.lower()\n",
     "    \n",
     "    \n",
