Update Word Classifier, fix errors, need more training

--- a/OCR-Evaluator.ipynb
+++ b/OCR-Evaluator.ipynb
@@ -324,7 +324,7 @@
     "                \n",
     "            for c in pred:\n",
     "                # word += CHARS[charIdx]\n",
-    "                word += idx2char(c, lang)        \n",
+    "                word += idx2char(c)        \n",
     "        return word.lower()\n",
     "    \n",
     "    \n",
@@ -374,31 +374,31 @@
      "text": [
       "\n",
       "STATS: Seq2Seq\n",
-      "spreads : ábqpsjuba\n",
-      "Correct/Total: 34 / 1356\n",
-      "Accuracy: 2.5074 %\n",
-      "Accuracy with correction: 2.8761 %\n",
-      "--- 20.75 seconds ---\n",
+      "spreads : sprest\n",
+      "Correct/Total: 646 / 1356\n",
+      "Accuracy: 47.6401 %\n",
+      "Accuracy with correction: 46.9027 %\n",
+      "--- 11.23 seconds ---\n",
       "\n",
       "STATS: Seq2Seq\n",
-      "spreads : spreadsa\n",
-      "Correct/Total: 963 / 1356\n",
-      "Accuracy: 71.0177 %\n",
-      "Accuracy with correction: 70.059 %\n",
-      "--- 35.87 seconds ---\n",
+      "spreads : sppeado\n",
+      "Correct/Total: 908 / 1356\n",
+      "Accuracy: 66.9617 %\n",
+      "Accuracy with correction: 68.8791 %\n",
+      "--- 31.73 seconds ---\n",
       "\n",
       "STATS: gapRNN - True, charRNN - False\n",
       "spreads : spreads\n",
       "Correct/Total: 1049 / 1356\n",
       "Accuracy: 77.3599 %\n",
       "Accuracy with correction: 80.0147 %\n",
-      "--- 61.47 seconds ---\n"
+      "--- 54.3 seconds ---\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<__main__.Cycler at 0x7fe5f26a4ef0>"
+       "<__main__.Cycler at 0x7f13e66bc3c8>"
       ]
      },
      "execution_count": 8,
