Training Seq2Seq2CNN accuracy with correction - 76.18%

--- a/OCR-Evaluator.ipynb
+++ b/OCR-Evaluator.ipynb
@@ -378,27 +378,27 @@
       "Correct/Total: 646 / 1356\n",
       "Accuracy: 47.6401 %\n",
       "Accuracy with correction: 46.9027 %\n",
-      "--- 11.23 seconds ---\n",
+      "--- 12.59 seconds ---\n",
       "\n",
       "STATS: Seq2Seq\n",
-      "spreads : sppeado\n",
-      "Correct/Total: 908 / 1356\n",
-      "Accuracy: 66.9617 %\n",
-      "Accuracy with correction: 68.8791 %\n",
-      "--- 31.73 seconds ---\n",
+      "spreads : spreads\n",
+      "Correct/Total: 997 / 1356\n",
+      "Accuracy: 73.5251 %\n",
+      "Accuracy with correction: 76.1799 %\n",
+      "--- 46.13 seconds ---\n",
       "\n",
       "STATS: gapRNN - True, charRNN - False\n",
       "spreads : spreads\n",
       "Correct/Total: 1049 / 1356\n",
       "Accuracy: 77.3599 %\n",
       "Accuracy with correction: 80.0147 %\n",
-      "--- 54.3 seconds ---\n"
+      "--- 69.36 seconds ---\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<__main__.Cycler at 0x7f13e66bc3c8>"
+       "<__main__.Cycler at 0x7fc5fa88cd68>"
       ]
      },
      "execution_count": 8,
