Creating CTC classifier and evaluating it CTC Classifier still has some bugs: wrong letter indexing...

--- a/OCR-Evaluator.ipynb
+++ b/OCR-Evaluator.ipynb
@@ -83,7 +83,8 @@
      "text": [
       "INFO:tensorflow:Restoring parameters from models/char-clas/en/CharClassifier\n",
       "INFO:tensorflow:Restoring parameters from models/word-clas/en/WordClassifier\n",
-      "INFO:tensorflow:Restoring parameters from models/word-clas/en/SeqRNN/Classifier\n"
+      "INFO:tensorflow:Restoring parameters from models/word-clas/en/SeqRNN/Classifier\n",
+      "INFO:tensorflow:Restoring parameters from models/word-clas/en/CTC/Classifier\n"
      ]
     }
    ],
@@ -93,7 +94,8 @@
     "# charClass_3 = Graph('models/char-clas/' + LANG + '/Bi-RNN/model_1', 'prediction')\n",
     "\n",
     "wordClass = Graph('models/word-clas/' + LANG + '/WordClassifier', 'prediction_infer')\n",
-    "wordClass2 = Graph('models/word-clas/' + LANG + '/SeqRNN/Classifier', 'word_prediction')"
+    "wordClass2 = Graph('models/word-clas/' + LANG + '/SeqRNN/Classifier', 'word_prediction')\n",
+    "wordClass3 = Graph('models/word-clas/' + LANG + '/CTC/Classifier', 'word_prediction')"
    ]
   },
   {
@@ -207,55 +209,78 @@
    "source": [
     "class WordCycler:\n",
     "    \"\"\" Cycle through the words and recognise them \"\"\" \n",
-    "    def __init__(self, images, labels, charClass, slider=(60, 15)):\n",
+    "    def __init__(self, images, labels, charClass, slider=(60, 15), ctc=False):\n",
     "        self.images = images\n",
     "        self.labels = labels\n",
     "        self.charClass = charClass\n",
     "        self.slider = slider\n",
     "        self.totalChars = sum([len(l) for l in labels])\n",
+    "        self.ctc = ctc\n",
     "        \n",
     "        self.evaluate()\n",
     "        \n",
     "    def recogniseWord(self, img):\n",
     "        slider = self.slider\n",
-    "        length = img.shape[1]//slider[1]\n",
     "        \n",
-    "        input_seq = np.zeros((1, length, slider[0] * slider[1]), dtype=np.float32)\n",
-    "        input_seq[0][:] = [img[:, loc * slider[1]: (loc+1) * slider[1]].flatten()\n",
-    "                           for loc in range(length)]                                \n",
-    "        input_seq = input_seq.swapaxes(0, 1)\n",
-    "        \n",
-    "                              \n",
-    "        if slider[1] == 15:\n",
-    "            targets = np.zeros((1, 1), dtype=np.int32)  \n",
-    "            pred = self.charClass.eval_feed({'encoder_inputs:0': input_seq,\n",
-    "                                             'encoder_inputs_length:0': [length],\n",
-    "                                             'decoder_targets:0': targets,\n",
+    "        if self.ctc:\n",
+    "            slider_step = 2\n",
+    "            length = (img.shape[1]-slider[1]) // slider_step\n",
+    "            input_seq = np.zeros((1, length, slider[0] * slider[1]), dtype=np.float32)\n",
+    "            input_seq[0][:] = [img[:, loc*slider_step: loc*slider_step + slider[1]].flatten()\n",
+    "                             for loc in range(length)]\n",
+    "            input_seq = input_seq.swapaxes(0, 1)\n",
+    "            \n",
+    "            pred = self.charClass.eval_feed({'inputs:0': input_seq,\n",
+    "                                             'inputs_length:0': [length],\n",
     "                                             'keep_prob:0': 1})[0]\n",
+    "            \n",
+    "            word = ''\n",
+    "            for i in pred:\n",
+    "                if word == 0 and i != 0:\n",
+    "                    break\n",
+    "                else:\n",
+    "                    word += idx2char(i+2, True)\n",
+    "            \n",
     "        else:\n",
-    "            targets = np.zeros((1, 1, 4096), dtype=np.int32)  \n",
-    "            pred = self.charClass.eval_feed({'encoder_inputs:0': input_seq,\n",
-    "                                             'encoder_inputs_length:0': [length],\n",
-    "                                             'letter_targets:0': targets,\n",
-    "                                             'is_training:0': False,\n",
-    "                                             'keep_prob:0': 1})[0]\n",
-    "        word = ''\n",
-    "        for i in pred:\n",
-    "            if word == 1:\n",
-    "                break\n",
-    "            else:\n",
-    "                word += idx2char(i, True)\n",
+    "            length = img.shape[1]//slider[1]\n",
     "\n",
-    "        return word.lower()\n",
+    "            input_seq = np.zeros((1, length, slider[0] * slider[1]), dtype=np.float32)\n",
+    "            input_seq[0][:] = [img[:, loc * slider[1]: (loc+1) * slider[1]].flatten()\n",
+    "                               for loc in range(length)]                                \n",
+    "            input_seq = input_seq.swapaxes(0, 1)\n",
+    "\n",
+    "\n",
+    "            if slider[1] == 15:\n",
+    "                targets = np.zeros((1, 1), dtype=np.int32)  \n",
+    "                pred = self.charClass.eval_feed({'encoder_inputs:0': input_seq,\n",
+    "                                                 'encoder_inputs_length:0': [length],\n",
+    "                                                 'decoder_targets:0': targets,\n",
+    "                                                 'keep_prob:0': 1})[0]\n",
+    "            else:\n",
+    "                targets = np.zeros((1, 1, 4096), dtype=np.int32)  \n",
+    "                pred = self.charClass.eval_feed({'encoder_inputs:0': input_seq,\n",
+    "                                                 'encoder_inputs_length:0': [length],\n",
+    "                                                 'letter_targets:0': targets,\n",
+    "                                                 'is_training:0': False,\n",
+    "                                                 'keep_prob:0': 1})[0]\n",
+    "            word = ''\n",
+    "            for i in pred:\n",
+    "                if word == 1:\n",
+    "                    break\n",
+    "                else:\n",
+    "                    word += idx2char(i, True)\n",
+    "\n",
+    "        return word\n",
     "    \n",
     "    \n",
-    "    def countCorrect(self, pred, label):\n",
+    "    def countCorrect(self, pred, label, lower=False):\n",
     "        correct = 0\n",
     "        for i in range(min(len(pred), len(label))):\n",
-    "            if pred[i] == label.lower()[i]:\n",
+    "            if ((not lower and pred[i] == label[i])\n",
+    "                 or (lower and pred[i] == label.lower()[i])):\n",
     "                correct += 1\n",
     "                \n",
-    "        return correct            \n",
+    "        return correct        \n",
     "\n",
     "    \n",
     "    def evaluate(self):\n",
@@ -270,8 +295,10 @@
     "            word = self.recogniseWord(self.images[i])\n",
     "            correct += self.countCorrect(word,\n",
     "                                         self.labels[i])\n",
-    "            correctWithCorrection += self.countCorrect(correction(word),\n",
-    "                                                       self.labels[i])\n",
+    "            # Correction works only for lower letters\n",
+    "            correctWithCorrection += self.countCorrect(correction(word.lower()),\n",
+    "                                                       self.labels[i],\n",
+    "                                                       lower=True)\n",
     "        print(\"Correct/Total: %s / %s\" % (correct, self.totalChars))\n",
     "        print(\"Accuracy: %s %%\" % round(correct/self.totalChars * 100, 4))\n",
     "        print(\"Accuracy with correction: %s %%\" % round(correctWithCorrection/self.totalChars * 100, 4))\n",
@@ -325,13 +352,14 @@
     "            for c in pred:\n",
     "                # word += CHARS[charIdx]\n",
     "                word += idx2char(c)        \n",
-    "        return word.lower()\n",
+    "        return word\n",
     "    \n",
     "    \n",
-    "    def countCorrect(self, pred, label):\n",
+    "    def countCorrect(self, pred, label, lower=False):\n",
     "        correct = 0\n",
     "        for i in range(min(len(pred), len(label))):\n",
-    "            if pred[i] == label.lower()[i]:\n",
+    "            if ((not lower and pred[i] == label[i])\n",
+    "                 or (lower and pred[i] == label.lower()[i])):\n",
     "                correct += 1\n",
     "                \n",
     "        return correct            \n",
@@ -354,8 +382,10 @@
     "            word = self.recogniseWord(self.images[i], gapRNN)\n",
     "            correct += self.countCorrect(word,\n",
     "                                         self.labels[i])\n",
-    "            correctWithCorrection += self.countCorrect(correction(word),\n",
-    "                                                       self.labels[i])\n",
+    "            # Correction works only for lower letters\n",
+    "            correctWithCorrection += self.countCorrect(correction(word.lower()),\n",
+    "                                                       self.labels[i],\n",
+    "                                                       lower=True)\n",
     "        print(\"Correct/Total: %s / %s\" % (correct, self.totalChars))\n",
     "        print(\"Accuracy: %s %%\" % round(correct/self.totalChars * 100, 4))\n",
     "        print(\"Accuracy with correction: %s %%\" %\n",
@@ -374,31 +404,38 @@
      "text": [
       "\n",
       "STATS: Seq2Seq\n",
-      "spreads : sprest\n",
-      "Correct/Total: 646 / 1356\n",
-      "Accuracy: 47.6401 %\n",
-      "Accuracy with correction: 46.9027 %\n",
-      "--- 12.59 seconds ---\n",
+      "spreads : represe\n",
+      "Correct/Total: 454 / 1356\n",
+      "Accuracy: 33.4808 %\n",
+      "Accuracy with correction: 32.4484 %\n",
+      "--- 11.85 seconds ---\n",
       "\n",
       "STATS: Seq2Seq\n",
       "spreads : spreads\n",
       "Correct/Total: 997 / 1356\n",
       "Accuracy: 73.5251 %\n",
       "Accuracy with correction: 76.1799 %\n",
-      "--- 46.13 seconds ---\n",
+      "--- 35.12 seconds ---\n",
+      "\n",
+      "STATS: Seq2Seq\n",
+      "spreads : spread\n",
+      "Correct/Total: 933 / 1356\n",
+      "Accuracy: 68.8053 %\n",
+      "Accuracy with correction: 76.0324 %\n",
+      "--- 39.27 seconds ---\n",
       "\n",
       "STATS: gapRNN - True, charRNN - False\n",
       "spreads : spreads\n",
       "Correct/Total: 1049 / 1356\n",
       "Accuracy: 77.3599 %\n",
       "Accuracy with correction: 80.0147 %\n",
-      "--- 69.36 seconds ---\n"
+      "--- 57.07 seconds ---\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<__main__.Cycler at 0x7fc5fa88cd68>"
+       "<__main__.Cycler at 0x7f312a0932e8>"
       ]
      },
      "execution_count": 8,
@@ -417,6 +454,12 @@
     "           labels,\n",
     "           wordClass2,\n",
     "           (60, 2))\n",
+    "\n",
+    "WordCycler(images,\n",
+    "           labels,\n",
+    "           wordClass3,\n",
+    "           (60, 30),\n",
+    "           True)\n",
     "\n",
     "Cycler(images,\n",
     "       labels,\n",
